--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,200&display=swap');
 *{
     margin: 0px;
     background-color:#EBEDEF ;
@@ -7,6 +9,14 @@ body{
     display: flex;
     align-items: center;
 }
+h1{
+    font-family: "poppins";
+}
+p{
+    font-family: "poppins";
+    font-size: small;
+
+}
 /* Here are stylessheets of layout */
 .page{
     width:100%;
@@ -14,19 +24,15 @@ body{
     display: flex;
 }
 section{
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: center;
-}
-aside{
-    width: 100%;
-    background: peru;
 }
 
 /* now, styles sheets of my profile card  */
 
 .card{
-    width: 50%;
+    width: 65%;
     height: 32rem;
     border-radius: 20px;
     display: flex;
@@ -54,7 +60,7 @@ aside{
   }
 
 .photo-profile{
-    margin-top: 30px;
+    margin-top: 25px;
     background-color: #FEF5E7;
 }
 .card h1{
@@ -75,7 +81,7 @@ aside{
     border-bottom: 0.05px solid #333;
     margin-top: 10px;
     border-radius: 130%;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 .info-profile{
     margin-top: 10px;
@@ -87,6 +93,8 @@ aside{
 .info-profile a{
     text-decoration: none;
     background-color:#FEF5E7;
+    font-family: "Poppins";
+    font-size: small;
 }
 .info{
     background-color:#FEF5E7;
@@ -107,7 +115,7 @@ aside{
 .icon-rrss{
     width: 35px;
     height: 35px;
-    background-color:#eb4d4b;
+    background-color:#F59191;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -119,11 +127,43 @@ aside{
 .icon-rrss a img{
     width: 25px;
     height: 25px;
-    background-color:#eb4d4b;
+    background-color:#F59191;
 }
 
 .info-rrss a{
-    background-color:#eb4d4b;
+    background-color:#F59191;
 }
 
+/* here are all my descripion (aside) */
 
+aside{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.bodyDescription{
+    width: 80%;
+    height: 400px;
+    background: #F59191;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    -webkit-box-shadow: 9px 12px 24px -12px rgba(0,0,0,0.75);
+    -moz-box-shadow: 9px 12px 24px -12px rgba(0,0,0,0.75);
+    box-shadow: 9px 12px 24px -12px rgba(0,0,0,0.75);
+}
+.card2{
+    width: 80%;
+}
+.bodyDescription h1{
+    text-align: center;
+    background: #F59191;
+    padding-bottom: 10px;
+}
+.bodyDescription p{
+    text-align: justify;
+    background: #F59191;
+}
