--- a/css/variables.css
+++ b/css/variables.css
@@ -8,5 +8,7 @@ body{
     --very-light-pink: #C7C7C7;
     --text-input-field: #F7F7F7;
     --hospital-green: #ACD9B2;
-
+    --sm: 14px;
+    --md: 16px;
+    --lg: 18px;
 }
