--- a/css/email-page.css
+++ b/css/email-page.css
@@ -36,6 +36,14 @@ body{
 .form{
     display: flex;
     flex-direction: column;
+    width: 100%;
+}
+.form a{
+    color: var(--hospital-green);
+    font: var(--sm);
+    text-align: center;
+    text-decoration: none;
+    margin-bottom: 54px;
 }
 .label{
     font-size: var(--sm);
@@ -50,6 +58,9 @@ body{
     font-size: var(--md);
     padding: 6px;
     margin-bottom: 12px;
+}
+.input-email{
+    margin-bottom: 22px;
 }
 .email-image{
     width: 132px;
@@ -75,6 +86,17 @@ body{
     font-size: var(--md);
     font-weight: bold;
 }
+.secondary-button{
+    background-color: var(--white);
+    border-radius: 8px;
+    border: 1px solid var(--hospital-green);
+    color: var(--hospital-green);
+    width: 100%;
+    height: 50px;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+}
 .login-button{
     margin-bottom: 30px;
     margin-top: 14px;
@@ -93,4 +115,9 @@ body{
     .logo{
         display: block;
     }
+    .secondary-button{
+        width: 300px;
+        position: absolute;
+        bottom: 0;
+        margin-bottom: 24px;
 }
