Estoy mejorando el menu de la version mobile de yard sale

--- a/css/index-yard.css
+++ b/css/index-yard.css
@@ -5,7 +5,7 @@
     border-radius: 6px;
     padding: 20px 20px 0 20px;
 }
-.desktop-menu ul{
+ul{
     list-style: none;
     padding: 0;
     margin: 0;
@@ -30,6 +30,34 @@
     text-decoration: none;
     display: inline-block;
     margin-bottom: 20px;
+}
+.mobile-menu{
+    padding: 24px;
+}
+.mobile-menu ul {
+    margin-bottom: 24px;
+}
+.mobile-menu ul li {
+    margin-bottom: 24px;
+}
+.mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+}
+.mobile-menu .email{
+    font-size: var(--sm);
+    font-weight: 300 !important;
+}
+.mobile-menu ul:nth-child(1){
+    border-bottom: 1px solid var(--very-light-pink);
+}
+.mobile-menu ul:last-child{
+    margin-top: 40px;
+}
+.sign-out{
+    font-size: var(--sm);
+    color: var(--hospital-green) !important;
 }
 
 .cards-container{
