--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 *{
     margin: 0px;
     background-color:#EBEDEF ;
+    font-family: "poppins";
 }
 :root{
     --primary-color: #231E39;
@@ -10,6 +11,10 @@
     --white:#FFFFFF;
     --black:#000000;
     --bg:#DDDDDD;
+    --sm: 14px;
+    --md: 16px;
+    --lg: 18px;
+    --title:24px;
 }
 body{
     background: var(--bg);
@@ -17,20 +22,94 @@ body{
     justify-content: center;
     align-items: center;
 }
+p{
+    background-color: var(--primary-color);
+}
+h1{
+    background-color: var(--primary-color);
+
+}
 .body-container{
     width: 100%;
     height: 100vh;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
 }
 .left-container, .rigth-container{
-    padding: 70px;
     display: flex;
-    flex-direction: row;
     justify-content: center;
 }
-.photo-profile{
+.container-profile{
+    background: var(--primary-color);
+    margin: 40px;
+    width: 380px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 30px;
+}
+.left-container{
     border: none;
+    border-radius: 20px;
+}
+.photo-profile{
+    background: var(--primary-color);
     border-radius: 50%;
-    width: 100px;
+    width: 150px;
+    object-fit: cover;
+    margin-top: 40px;
+}
+.title-name{
+    font-size: var(--title);
+    font-weight: bold;
+    color: var(--white);
+    text-align: center;
+    margin-top: 20px;
+}
+.container-profile span{
+    font-size: var(--md);
+    color: var(--second-color);
+    background: var(--primary-color);
+}
+.line{
+    border: 1px solid var(--second-color);
+    width: 80%;
+    margin: 12px 0;
+    border-radius: 40%;
+}
+.info-profile{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: start;
+    grid-gap: 12px;
+    background: var(--primary-color);
+    margin-bottom: 4px;
+}
+.icon-rrss{
+    background: var(--primary-color);
+}
+.icon-rrss img{
+    background: var(--primary-color);
+    width: 24px;
+    height: 24px;
+    color: var(--white);
+}
+.description-rrss a{
+    background: var(--primary-color);
+    text-decoration: none;
+    color: var(--white);
+    font-size: var(--sm);
+}
+.description-rrss{
+    background: var(--primary-color);
+    text-decoration: none;
+    color: var(--white);
+    font-size: var(--sm);
+}
+.container-info{
+    background: var(--primary-color);
+    margin-top: 12px;
+}
+.icon{
+    fill: var(--white);
 }
