--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,6 @@ body{
   }
 .left-container{
     border: none;
-    border-right: 1px solid var(--primary-color);
 }
 .photo-profile{
     background: var(--primary-color);
@@ -170,7 +169,6 @@ body{
     place-items: center;
 }
 .info-container{
-    color: var(--primary-color);
     border-radius: 30px;
     background: var(--white);
     width: 80%;
@@ -179,19 +177,22 @@ body{
 .info-container h1{
     margin: 16px 16px 0px 16px;
     text-align: center;
+    color: var(--primary-color);
 }
 .info-container p{
     margin: 28px 28px;
     text-align: justify;
     font-size: var(--sm);
-
+    color: var(--second-color);
 }
 .info-container ul{
-    margin: 28px 16px;
+    margin: 28px 28px;
+    list-style: none;
+    padding: 0px;
 }
 .info-container a{
     text-decoration: none;
-    color: var(--primary-color);
+    color: var(--second-color);
     font-size: var(--sm);
 }
 @media (max-width:700px) {
