Estamos agregando funcionalidades de change color

--- a/ccProject/css/style.css
+++ b/ccProject/css/style.css
@@ -65,3 +65,11 @@ button:hover{
     color: var(--second-color);
 
 }
+@media (max-width: 640px) {
+    .title{
+        font-size: var(--lg);
+    }
+    .colorHEX{
+        font-size: var(--md);
+    }
+}
