--- a/yardProject/css/index-yard.css
+++ b/yardProject/css/index-yard.css
@@ -1,9 +1,22 @@
 .desktop-menu{
+    background: var(--white);
+    position: absolute;
+    right: 60px;
+    top: 68px;
     width: 100px;
     height: auto;
     border: 1px solid var(--very-light-pink);
     border-radius: 6px;
     padding: 20px 20px 0 20px;
+    animation: scrolling 500ms;
+}
+@keyframes  scrolling {
+    0%{
+        transform: translateY(-20px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
 }
 ul{
     list-style: none;
