--- a/yardProject/css/navbar.css
+++ b/yardProject/css/navbar.css
@@ -4,12 +4,14 @@
 .logo{
     width: 100px;
 }
+.inactive{
+    display: none;
+}
 nav{
     display: flex;
     justify-content: space-between;
     padding: 0 24px;
     border-bottom: 1px solid var(--very-light-pink);
-    border-radius: 20px;
 }
 .navbar-left ul, .navbar-right ul{
     list-style: none;
@@ -43,6 +45,11 @@ nav{
     color: var(--very-light-pink);
     font-size: var(--sm);
     margin-right: 12px;
+    cursor: pointer;
+}
+.navbar-email:hover{
+    transition: 1000ms;
+    color: var(--black);
 }
 .shopping-cart{
     position: relative;
