--- a/yardProject/css/index-yard.css
+++ b/yardProject/css/index-yard.css
@@ -51,6 +51,7 @@ ul{
 
 /* HERE! mobile menu */
 .mobile-menu{
+    background: var(--white);
     position: absolute;
     top: 68px;
     padding: 24px;
@@ -97,6 +98,7 @@ ul{
     grid-template-columns: repeat(auto-fill, 240px);
     gap: 26px;
     place-content: center;
+    margin-top: 20px;
 }
 .product-card{
     width: 240px;
