--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,6 @@
 }
 body{
     background: var(--bg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .description-rrss{
     background-color: var(--primary-color);
@@ -198,6 +195,43 @@ body{
     color: var(--second-color);
     font-size: var(--sm);
 }
+.portfolio-container{
+    width: 100%;
+    height: 300px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    place-items: center;
+    padding: 20px 0 20px 0;
+}
+.portfolio-container-left{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.portfolio-container-rigth{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.portfolio-container-rigth img{
+    width: 90%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+.fade-in {
+    opacity: 0;
+    transform: translateX(-10%);
+    transition: opacity 1s ease, transform 1s ease;
+  }
+  .fade-in.active {
+    opacity: 1;
+    transform: translateX(0);
+  }
 @media (max-width:700px) {
     .body-container{
         grid-template-columns: 1fr;
