--- a/css/styles.css
+++ b/css/styles.css
@@ -195,24 +195,28 @@ body{
     color: var(--second-color);
     font-size: var(--sm);
 }
+
+/* Portfolio container */
 .portfolio-container{
     width: 100%;
-    height: 300px;
     display: grid;
     grid-template-columns: 50% 50%;
     place-items: center;
     padding: 20px 0 20px 0;
 }
 .portfolio-container-left{
-    width: 100%;
-    height: 100%;
+    width: 80%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    
+}
+.portfolio-container-left p{
+    text-align: justify;
 }
 .portfolio-container-rigth{
     width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -222,6 +226,9 @@ body{
     height: 300px;
     object-fit: cover;
     border-radius: 20px;
+    -webkit-box-shadow: 9px 12px 24px -12px rgba(0,0,0,0.75);
+    -moz-box-shadow: 9px 12px 24px -12px rgba(0,0,0,0.75);
+    box-shadow: 9px 12px 24px -12px rgba(0,0,0,0.75);
 }
 .fade-in {
     opacity: 0;
@@ -232,8 +239,30 @@ body{
     opacity: 1;
     transform: translateX(0);
   }
+  .title-portfolio{
+    width: 100%;
+    height: 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+  }
+  .title-portfolio-sub{
+    width: 80%;
+    height: 100%;
+    border-top: 1px solid var(--second-color);
+    text-align: center;
+  }
+  .title-portfolio-sub h1{
+    color: var(--primary-color);
+    font-weight: 400;
+  }
 @media (max-width:700px) {
+    
     .body-container{
+        grid-template-columns: 1fr;
+        height: 100%;
+    }
+    .portfolio-container{
         grid-template-columns: 1fr;
     }
     .left-container{
