--- a/yardProject/css/info-product.css
+++ b/yardProject/css/info-product.css
@@ -1,8 +1,9 @@
-.product-detail{
+#productDetail{
     width: 360px;
     padding-bottom: 24px;
     position: absolute;
     right: 0;
+    background: var(--white);
 }
 .product-detail-close:hover{
     cursor: pointer;
@@ -18,7 +19,7 @@
     padding: 12px;
     border-radius: 50%;
 }
-.product-detail > img:nth-child(2){
+#productDetail > img:nth-child(2){
     width: 100%;
     height: 360px;
     object-fit: cover;
@@ -73,7 +74,7 @@
     justify-content: center;
 }
 @media (max-width:640px) {
-    .product-detail{
+    #productDetail{
         width: 100%;
     }
 }
