--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,10 @@ body{
     -moz-box-shadow: 9px 12px 24px -12px rgba(0,0,0,0.75);
     box-shadow: 9px 12px 24px -12px rgba(0,0,0,0.75);
 }
+.portfolio-container-rigth:hover{
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+    filter: blur(6px);
+}
 .fade-in {
     opacity: 0;
     transform: translateX(-10%);
@@ -256,6 +260,27 @@ body{
     color: var(--primary-color);
     font-weight: 400;
   }
+  .description-project{
+    color: var(--primary-color);
+    font-size: var(--sm);
+  }
+
+.container-link{
+    width: 140px;
+    height: 40px;
+    background: var(--primary-color);
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 16px 0;
+}
+.url-project{
+    text-decoration: none;
+    font-size: 12px;
+    color: var(--white);
+}
+
 @media (max-width:700px) {
     
     .body-container{
