--- a/OurReviewsProject/css/general-style.css
+++ b/OurReviewsProject/css/general-style.css
@@ -74,7 +74,7 @@
     color: var(--primary-color);
 }
 .info-employee p{
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 200;
     margin-top: 8px;
     color: var(--default-grey)
@@ -111,4 +111,10 @@
     background-color: white;
     color: var(--primary-color);
 }
+
+    @media (max-width:700px) {
+        .container-general{
+            width: 80%;
+        }
+    }
 
