add code with localStorage and custom hooks

--- a/todo/src/css/TodoAddTaskButton.css
+++ b/todo/src/css/TodoAddTaskButton.css
@@ -23,16 +23,15 @@ footer div{
   
   @keyframes moveRightLeft {
     0% {
-      transform:scaleX(1); transform-origin:0 0
+      transform:translateX(0);
     }
     50% {
-      transform:scaleX(.3); transform-origin:0 0
+      transform:translateX(20px);
     }
     100% {
-      transform:scaleX(1); transform-origin:0 0
+      transform:translateX(0); 
     }
   }
-
 button {
     border: none;
     background: none;
